# kubos_test_services

./: README.md  kubos-config.toml
camera_service/: .gitignore  Cargo.toml  README.md  config.toml
camera_service/src/: main.rs  model.rs  schema.rs
example_service/: Cargo.toml  README
example_service/src/: main.rs  model.rs  schema.rs
old_code/uart_test/: Cargo.toml
payload_service/: Cargo.toml  payload-service-init
payload_service/src/: comms.rs  main.rs  model.rs  schema.rs
serial_coms/: Cargo.toml
serial_coms/src/: main.rs
serial_service/: Cargo.toml
serial_service/src/: comms.rs  main.rs  model.rs  schema.rs
serial_test/: serial_test.py
serial_test/uart_test/src/: main.rs
testcode/serial_test/: serial_test.py
testcode/serial_test/kubos_uart/: Cargo.toml  README
testcode/serial_test/kubos_uart/src/: comms.rs  main.rs
testcode/serial_test/radio_comms/kuart_test/: Cargo.toml
testcode/serial_test/radio_comms/kuart_test/src/: comms.rs  kiss.rs  main.rs
testcode/serial_test/uart_test/: Cargo.toml
uart_test/src/: comms.rs  main.rs
