[package]
name = "kubos_uart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.2"
juniper =  "0.11"
log = "^0.4.0"
rust-uart = { path = "/home/dylan/DevTools/kubos/hal/rust-hal/rust-uart" } # https://docs.kubos.com/1.17.0/rust-docs/rust_uart/index.html
serial = "0.4.0"
kubos-service = { path = "/home/dylan/DevTools/kubos/services/kubos-service" }
